--- a/index.html
+++ b/index.html
@@ -16,98 +16,141 @@
             background-image: url('https://static.vecteezy.com/ti/fotos-gratis/p1/13002116-fundo-abstrato-de-textura-de-glitter-rosa-foto.jpg'); /* Fundo de glitter rosa! */
             background-size: cover;
             background-position: center;
-            font-size: 1.2em; /* Aumentando o tamanho da fonte base */
+            font-size: 1.2em;
         }
         #jogo-container {
-            background-color: rgba(255, 255, 255, 0.9); /* Rosa clarinho para o palco fashion com transparência! */
-            padding: 40px; /* Aumentando o padding */
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 30px; /* Reduzindo um pouco o padding em geral */
             border-radius: 15px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); /* Sombra mais pronunciada */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             text-align: center;
+            margin: 20px; /* Adicionando margem para respiro nas laterais */
         }
         #barbie-titulo {
-            font-size: 3em; /* Título maior e mais diva! */
-            margin-bottom: 30px;
-            color: #ff69b4; /* Rosa choque para o título! */
+            font-size: 2.5em; /* Reduzindo o tamanho do título em telas menores */
+            margin-bottom: 20px;
+            color: #ff69b4;
             text-shadow: 2px 2px #f08080;
         }
         #pergunta-diva {
-            font-size: 1.5em; /* Perguntas maiores! */
+            font-size: 1.3em; /* Reduzindo o tamanho da pergunta */
             font-weight: bold;
-            color: #da70d6; /* Orquídea fashion! */
-            margin-bottom: 20px;
+            color: #da70d6;
+            margin-bottom: 15px;
         }
         .opcao-look {
-            padding: 15px 30px; /* Botões maiores */
-            font-size: 1.2em; /* Texto dos botões maior */
+            padding: 12px 25px; /* Reduzindo o padding dos botões */
+            font-size: 1em; /* Reduzindo o tamanho do texto dos botões */
             border: none;
             border-radius: 10px;
-            background-color: #ba55d3; /* Lilás elegante! */
+            background-color: #ba55d3;
             color: white;
             cursor: pointer;
-            margin: 10px;
+            margin: 8px; /* Reduzindo a margem dos botões */
             transition: background-color 0.3s ease;
+            width: 80%; /* Ocupando mais largura em telas menores */
+            display: block; /* Botões em linhas separadas */
+            margin-left: auto;
+            margin-right: auto;
         }
         .opcao-look:hover {
-            background-color: #9400d3; /* Roxo vibrante! */
+            background-color: #9400d3;
         }
         #mensagem-diva {
-            margin-top: 30px;
-            font-size: 1.4em;
+            margin-top: 20px; /* Reduzindo a margem superior */
+            font-size: 1.2em;
             font-weight: bold;
-            color: #ff1493; /* Pink arrasador! */
+            color: #ff1493;
         }
         #status-diva {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #8a2be2; /* Roxo sofisticado! */
+            margin-top: 15px; /* Reduzindo a margem superior */
+            font-size: 1em;
+            color: #8a2be2;
         }
         #ranking-diva-container {
-            margin-top: 50px;
+            margin-top: 30px; /* Reduzindo a margem superior */
             text-align: left;
         }
         #ranking-lista-diva {
             list-style-type: decimal;
-            padding-left: 30px;
-            color: #c71585; /* Vermelho fashionista! */
-            font-size: 1.2em; /* Ranking maior */
+            padding-left: 20px; /* Reduzindo o padding esquerdo */
+            color: #c71585;
+            font-size: 1em;
         }
         #salvar-ranking-btn {
-            padding: 12px 25px;
-            font-size: 1.2em;
+            padding: 10px 20px; /* Reduzindo o padding do botão */
+            font-size: 1em;
             border: none;
             border-radius: 8px;
-            background-color: #4682b4; /* Azul estiloso! */
+            background-color: #4682b4;
             color: white;
             cursor: pointer;
-            margin-top: 15px;
+            margin-top: 10px; /* Reduzindo a margem superior */
             transition: background-color 0.3s ease;
         }
         #salvar-ranking-btn:hover {
             background-color: #2e648b;
         }
         #nome-diva {
-            padding: 10px;
-            margin-top: 15px;
+            padding: 8px; /* Reduzindo o padding do input */
+            margin-top: 10px; /* Reduzindo a margem superior */
             border: 1px solid #ccc;
             border-radius: 8px;
-            font-size: 1.2em; /* Input maior */
+            font-size: 1em;
+            width: 70%; /* Ocupando mais largura */
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
         }
         #compartilhar-diva {
-            margin-top: 40px;
+            margin-top: 30px; /* Reduzindo a margem superior */
         }
         #compartilhar-whatsapp-btn {
-            padding: 12px 25px;
-            font-size: 1.2em;
+            padding: 10px 20px; /* Reduzindo o padding do botão */
+            font-size: 1em;
             border: none;
             border-radius: 8px;
-            background-color: #25d366; /* Verde WhatsApp fashion! */
+            background-color: #25d366;
             color: white;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
         #compartilhar-whatsapp-btn:hover {
             background-color: #128c7e;
+        }
+
+        /* Media Queries para telas menores (até 600px de largura) */
+        @media (max-width: 600px) {
+            body {
+                font-size: 1em; /* Reduzindo ainda mais a fonte base em telas bem pequenas */
+            }
+            #barbie-titulo {
+                font-size: 2em;
+            }
+            #pergunta-diva {
+                font-size: 1.1em;
+            }
+            .opcao-look {
+                font-size: 0.9em;
+                padding: 10px 20px;
+            }
+            #mensagem-diva {
+                font-size: 1em;
+            }
+            #status-diva {
+                font-size: 0.9em;
+            }
+            #ranking-lista-diva {
+                font-size: 0.9em;
+                padding-left: 15px;
+            }
+            #salvar-ranking-btn, #compartilhar-whatsapp-btn, #nome-diva {
+                font-size: 0.9em;
+            }
+            #jogo-container {
+                padding: 20px;
+                margin: 10px;
+            }
         }
     </style>
 </head>
@@ -136,10 +179,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
     <script>
-        // Código para reiniciar o ranking (execute uma vez e depois comente ou remova)
-        // localStorage.removeItem('barbieModaProbabilidadeRanking');
-        // console.log("Ranking reiniciado!");
-
         let vidasDiva = 3;
         let pontuacaoDiva = 0;
         let rankingDiva = carregarRanking(); // Carrega o ranking ao iniciar o jogo
@@ -160,7 +199,6 @@
         }
 
         function apresentarDesafio() {
-            console.log("A função apresentarDesafio foi chamada!"); // ADICIONEI ESTA LINHA
             desafioAtual = gerarDesafioDiva();
             document.getElementById('pergunta-diva').textContent = desafioAtual.pergunta;
 
